chore: camera wait
